tests/fixtures/invalid/none_notin_float.py
# Cannot use 'not in' with None and Float
x: bool = None not in 1.0
